add content module
